--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
             <li><a href="#"><h3>LEARN MORE</h3></a></li>
         </ul>
     </section>
-    <div>
+    <section>
         <ul>
             <li><img src="https://s3-alpha-sig.figma.com/img/6569/0b9d/611ca1982b0045ab64e00f08910c7139?Expires=1681689600&Signature=fUxK~ciNiWeFE-byUaFefHI4-vPSVX1-Bwrr36~3HYsBT5I-sFYeGuD3UQLqQFtSjsDK1Bz9TDFD68AA7DJSthVRbyJQQaW6DC~-jkJSnwxXAIB1pQR8bjtMvF-nwBzqkxZEWV-dXoCiXLhm3PmvU~ggolIQlkKRbtumbVhPq2KTfIbwIr6OLKncfpp4HpgazG~7J9Xl5nTcpEaK5qVrYllV4Y19urKoFWWalOpUzE5nfuY83Q-fNo8Z11bjS~xDgerIYFvceTGFum0nYdP~obcPtxH9PhFjcMDvSzrVR02XGlgPt1uPvxx~ddGLeDWgv2FDrT2HixhHRipmp5e1Mw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="square"></li>
             <li><img src="https://s3-alpha-sig.figma.com/img/6ba6/3233/dcab8aca14d692a870a2b965dd1d4087?Expires=1681689600&Signature=FpzYPp-4IIL0-i8Rt9YonKh6oie8AvdvHh5~xrmKXogiXmACo1ogYkkdijlW50PZyt-cco-HL6AuFDsuYIptmwKuzjn0kYLxVUDV-TwiCzndU4bUp2TiPJFLtmUNi0mrJv72qaehcK0V7h7wHlA~SmzAse~5F31uzbryg783Al5pWvSn9snnl-mbcKQ45Jn9JCITYFNJjmuGgFzZitNwNrsKWc5xcAWxKZeF~gXdTGcVgf-u0XTAUZ5sivxYWepmZ4b6Or3vP~QmkzPYtaLR5WdP~XIaVjXOkkNoUHo9gJErXYcjGaPs5sociL09~YmZ-lfSZ~4EULrWa6zde~6ToA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="square"></li>
             <li><img src="https://s3-alpha-sig.figma.com/img/665d/117f/a929a1b083698fa7004ce2d8593459b8?Expires=1681689600&Signature=nqy2xdj15m5qh~9lJZxEf3giLlxeKaIcoPLTRZCn4N3sR7LWf4rAzPVYK9i6XydL9NH0qvQIS3ArzagsMjkZImmCPlQAZbTWYIfEO3q4Zc7LNBPQMX6EAIgfjlm0mkY49QCs-MkQp0utNVMXWVmiVCWQPkbTvFbMx~WtHJwIVfVwU5VUJDfR5g62nSARWURkEY4tJUw-yiVwwmiHieSo38XkJjDI7ar3NXO4ieTBtDcu8s8LoLOTCNOcE8x3Z3s51eHqePpqo8J5JjMMQNZ6XQAuBX4McSHVcIEVI~ZIc6mumG1M9TtJWmdSACi7v7x~HO3gZDVfek~2p2YP6YyfBw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="square"></li>
             <li><img src="https://s3-alpha-sig.figma.com/img/782a/615e/e34fb24117df478f54d95986d1892305?Expires=1681689600&Signature=PCo5xGF28oH4c6eLe907UqNKh8KUeS1vLhrvRF9b97wnh430La6titvdCNlPkF~5i3TvUltDH3O4mYmTTefq5qxinDB-0BuDFnftkU1F9IV4w8o0Ka3yev5jvXc7-ZAyj~hn4kiqB3cbo5wORfI7~w6hrKZmwmzhHNXWsoQe8G9KGFu8dcHgd~hrK~PXQO06KUHa9pHYt61zGKIEXl4tmgxRIIl76KqYA5FA-rnENCuCTmCf1Siwl9ahwe4JFjIg-xNAd5QWVYkPSTCIRY8KBIhj6rH63xZdCzkaHIvAy7cw~klMIJhDm5iHFTnHLJfvdDSolVzm83TeacD6Jvnz-A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="square"></li>
         </ul>
-    </div>
+    </section>
     <article>
         <h2>DESIGN LIFE KIDS</h2>
         <h3>About Us</h3>
