--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
             </ul>
         </nav>   
         <ul>
-            <li><input type="search"><img src="http://cdn.onlinewebfonts.com/svg/img_4840.png" alt="magnifying glass"></li>
+            <li>
+                <form>
+                    <input type="search"><img src="http://cdn.onlinewebfonts.com/svg/img_4840.png" alt="magnifying glass">
+                </form>
+            </li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
     </header>
