--- a/index.html
+++ b/index.html
@@ -33,16 +33,19 @@
     <main>
         <section>
             <p>01</p>
-            <button><img src="#" alt="rectangle"></button>
-            <button><img src="#" alt="rectangle"></button>
-            <button><img src="#" alt="rectangle"></button>
-            <button><img src="#" alt="rectangle"></button>
+            <div>
+                <button><img src="#" alt="rectangle"></button>
+                <button><img src="#" alt="rectangle"></button>
+                <button><img src="#" alt="rectangle"></button>
+                <button><img src="#" alt="rectangle"></button>
+            </div>
+            <div>
             <h1>THE OOH NOO COLLECTION</h1>
-            <p>Desinger in Slovenia</p>
-            <button>EXPLORE NOW</button>
-            <img src="https://s3-alpha-sig.figma.com/img/dbc3/5a00/d4be15bd186737d55fe4d5ca479c6493?Expires=1681689600&Signature=ILJ5sl5gIt8pseeokAWpIF3rPs~jTRFS-Q6CGjI1NMXVCzLP0sdnMZdzXguS0~omSDruKYG3I9gT9RvssKwpLaf3~EQ3LslubsSC3QZcTReLJPfdAoajUuRAK8mTrNayNijYfM82zlIXKRNlAy2gY7kHt2VUvJ78aT2ApdZ-uYSFmzQ7br6RHqDA1k1ruul1kEa1qnu67pl2r~5xtHyNaFfyTcHq3SEvL3AiFqTzO6L1bW7P1lL7kdU-eF2Z~5JPj3yNSTrK1wy~op2noIyxWnoAfIsX1BPi7t~uL2TBCEpzj2Gg-5NQrYhRMFejLdlFo5e9cYSIE12cLRtfG8GLVw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="fd">
-            <h3>FREE (CONTINENTAL) USA SHIPPING ON ALL ORDERS OF $100 USD OR MORE!</h3>
-            <img src="#" alt="rectangle">
+                <p>Desinger in Slovenia</p>
+                <button>EXPLORE NOW</button>
+                <img src="https://s3-alpha-sig.figma.com/img/dbc3/5a00/d4be15bd186737d55fe4d5ca479c6493?Expires=1681689600&Signature=ILJ5sl5gIt8pseeokAWpIF3rPs~jTRFS-Q6CGjI1NMXVCzLP0sdnMZdzXguS0~omSDruKYG3I9gT9RvssKwpLaf3~EQ3LslubsSC3QZcTReLJPfdAoajUuRAK8mTrNayNijYfM82zlIXKRNlAy2gY7kHt2VUvJ78aT2ApdZ-uYSFmzQ7br6RHqDA1k1ruul1kEa1qnu67pl2r~5xtHyNaFfyTcHq3SEvL3AiFqTzO6L1bW7P1lL7kdU-eF2Z~5JPj3yNSTrK1wy~op2noIyxWnoAfIsX1BPi7t~uL2TBCEpzj2Gg-5NQrYhRMFejLdlFo5e9cYSIE12cLRtfG8GLVw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="fd">
+                <h3>FREE (CONTINENTAL) USA SHIPPING ON ALL ORDERS OF $100 USD OR MORE!</h3>
+            </div>
         </section>
     </main>
     <section>
@@ -61,15 +64,13 @@
     </section>
     <section>
         <img src="https://s3-alpha-sig.figma.com/img/1332/8c2a/38d58250bbf06c70d6c3bd6f266872e1?Expires=1681689600&Signature=NKugGVbsVUTzIkZaWQQ4WE8r2rLoSi2admi4Y5~aEAhyw0hYa6Qg5LoWZvJ7Jl0LiVNC~DaytIokQEiZLI3Y38yQk5zCeQYbABiajC-R-PixxHIM0P1trNDCqpKzdiJnPhGRc5O2d85TCrK~w2rDkWi-bGqvyxwRlF0giF~FO7kqIbCv7aoqN0IVy2Vg42NgZNTOkLwVeTVjn4ajfpp2UtnFfPe0yX6UO1UwCbBWk3bjtQxD~GbmPaxxTZn9JpeFuiQSuaXZ1KL3za5lVWhlzHBKnc~WaIEPlK1hyynqP6DsnDSIkKip9QZnax91RpjWA9YtSyv1gvcgU4BqD-qvpg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="Girl">
-        <ul>
-            <li><h2>DELIVERY</h2></li>
-            <li><h3>Delivery</h3></li>
-            <li><h3>Guarantee</h3></li>
-            <li><h3>Credit</h3></li>
-        </ul>
-        <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked thet four years have flown by. It's simply magical.</p>
-        <p>What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
-        <ul>
+        <>
+            <li><p>DELIVERY</p></li>
+            <li><p>Delivery</p></li>
+            <li><p>Guarantee</p></li>
+            <li><p>Credit</p></li>
+            <li><p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked thet four years have flown by. It's simply magical.</p></li>
+            <li><p>What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p></li>
             <li><a href="#"><h3>LEARN MORE</h3></a></li>
         </ul>
     </section>
@@ -81,21 +82,20 @@
             <li><img src="https://s3-alpha-sig.figma.com/img/782a/615e/e34fb24117df478f54d95986d1892305?Expires=1681689600&Signature=PCo5xGF28oH4c6eLe907UqNKh8KUeS1vLhrvRF9b97wnh430La6titvdCNlPkF~5i3TvUltDH3O4mYmTTefq5qxinDB-0BuDFnftkU1F9IV4w8o0Ka3yev5jvXc7-ZAyj~hn4kiqB3cbo5wORfI7~w6hrKZmwmzhHNXWsoQe8G9KGFu8dcHgd~hrK~PXQO06KUHa9pHYt61zGKIEXl4tmgxRIIl76KqYA5FA-rnENCuCTmCf1Siwl9ahwe4JFjIg-xNAd5QWVYkPSTCIRY8KBIhj6rH63xZdCzkaHIvAy7cw~klMIJhDm5iHFTnHLJfvdDSolVzm83TeacD6Jvnz-A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="square"></li>
         </ul>
     </section>
-    <article>
+    <section>
         <h2>DESIGN LIFE KIDS</h2>
-        <h3>About Us</h3>
+        <p>About Us</p>
         <p>Some days i feel like i've been working on dlk my entire life and there are other days thet i am completely shocked that four years have flown by. It's simply magical.</p>
         <a href="#"><h2>BUY NOW</h2></a>
-    </article>
+    </section>
     <article>
         <h2>CONTACTS</h2>
         <p>Some days i feel like i've been working on dlk my entire life and there are other days thet i am completely shocked that four years have flown by. It's simply magical.</p>
-        <img src="https://s3-alpha-sig.figma.com/img/375f/800f/57b8aeaf7f1c7431870a0b1d87c2278f?Expires=1681689600&Signature=XqBcdj3leRyLjp~h11dMxT6yZH-z1ZBhk-ItrpPcyaiRESDRi6AvvNTXH619Son8eR8pQcI47GvApcSxa4KTPcuck4lRpibpKlbFTmFnYC8NjQoizGyWcGOZYDdsYs9vZsE3TSSdD~S0Lqv9tAb~IIb3J-hdLvnVSVD7N4svpDtsAEDQGAUgre2YP6ARmwM2hmc6OzvRjQKVKUOPFGz2Ml5J~fhwvtVz8TOUrFoHRakGaZBh607PBwCDeP9qx8XCk0wf70tKQuy3f6qPRLkFbIyTLeTo-gpC4mX52PeCJc~judEe-ELzlOdWvRwraVyg44r-fpc~holU0g9Ktnc7cw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="rectangle">
+        <img src="https://s3-alpha-sig.figma.com/img/375f/800f/57b8aeaf7f1c7431870a0b1d87c2278f?Expires=1681689600&Signature=XqBcdj3leRyLjp~h11dMxT6yZH-z1ZBhk-ItrpPcyaiRESDRi6AvvNTXH619Son8eR8pQcI47GvApcSxa4KTPcuck4lRpibpKlbFTmFnYC8NjQoizGyWcGOZYDdsYs9vZsE3TSSdD~S0Lqv9tAb~IIb3J-hdLvnVSVD7N4svpDtsAEDQGAUgre2YP6ARmwM2hmc6OzvRjQKVKUOPFGz2Ml5J~fhwvtVz8TOUrFoHRakGaZBh607PBwCDeP9qx8XCk0wf70tKQuy3f6qPRLkFbIyTLeTo-gpC4mX52PeCJc~judEe-ELzlOdWvRwraVyg44r-fpc~holU0g9Ktnc7cw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="map">
     </article>
     <footer>
         <section>
             <h2>Navigation</h2>
-            <img src="#" alt="Line">
             <ul>
                 <li>About Us</li>
                 <li>Blog</li>
@@ -107,7 +107,6 @@
         </section>
         <section>
             <h2>Customer Information</h2>
-            <img src="#" alt="Line">
             <ul>
                 <li>Contact Us</li>
                 <li>Sale Exclusions</li>
@@ -119,9 +118,10 @@
         </section>
         <section>
             <h2>Connect</h2>
-            <img src="#" alt="Line">
-            <input type="email" name="email" id="email" required>
-            <button>JOIN</button>
+            <form>
+                <input type="email" name="email" id="email" required>
+                <button type="submit">JOIN</button>
+            </form>
             <ul>
                 <li><a href="/"><img src="#" alt="Logotype Facebook"></a></li>
                 <li><a href="/"><img src="#" alt="Logotype Twitter"></a></li>
@@ -129,7 +129,6 @@
                 <li><a href="/"><img src="#" alt="Logotype Instagram"></a></li>
             </ul>
         </section>
-        <img src="#" alt="Line">
         <h2>Copyright © 2018 Dlk • Design Life Kids</h2>
         <h2>Web Design — Direct Line Development</h2>
     </footer>
