--- a/index.html
+++ b/index.html
@@ -17,16 +17,7 @@
             </ul>
         </nav>   
         <ul>
-            <li>
-                <div>
-                    <form action="#">
-                        <input type="text" name="Search" placeholder="Search...">
-                        <button type="submit">
-                            <img src="http://cdn.onlinewebfonts.com/svg/img_4840.png" alt="magnifying glass">
-                        </button>
-                    </form>
-                </div>    
-            </li>
+            <li><img src="http://cdn.onlinewebfonts.com/svg/img_4840.png" alt="magnifying glass"></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
     </header>
