--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </nav>
         <ul class="header__list">
             <li class="header__list-item">
-                <div class="header__list-block">
+                <div class="header__list-wrapper">
                     <form class="header__list-form">
                         <input type="text" placeholder="Search here..." class="header__list-input">
                         <button type="submit">
-                            <img src="./images/Header/XMLID1397.png" alt="magnifying glass" class="header__list-icon">
+                            <img src="./images/Header/XMLID.png" alt="magnifying glass" class="header__list-icon">
                         </button>
                     </form>
                 </div>
@@ -56,56 +56,56 @@
             </div>
         </section>
     </main>
-    <section class="Services">
-        <h2 class="Services__title">CATEGORY PRODUCTS</h2> 
-        <ul class="Services__list">
-            <li class="Services__list-item">
--              <img src="./images/Category/Product-1.png" alt="rectangle" class="Services__list-img">
-                <a href="#" class="Services__list-link">
-                    <h3 class="Services__list-subtitle">APPAREL KIDS</h3>
+    <section class="services">
+        <h2 class="services__title">CATEGORY PRODUCTS</h2> 
+        <ul class="services__list">
+            <li class="services__list-item">
+-              <img src="./images/Category/Product-one.png" alt="services__list-pic" class="services__list-img">
+                <a href="#" class="services__list-link">
+                    <h3 class="services__list-subtitle">APPAREL KIDS</h3>
                 </a>
             </li>
-            <li class="Services__list-item">
-                <img src="./images/Category/Product-2.png" alt="rectangle" class="Services__list-img">
+            <li class="services__list-item">
+                <img src="./images/Category/Product-two.png" alt="services__list-pic" class="services__list-img">
                 <a href="#" class="Services__list-link">
-                    <h3 class="Services__list-subtitle">HOLIDAY SHOP</h3>
+                    <h3 class="services__list-subtitle">HOLIDAY SHOP</h3>
                 </a>
             </li>
-            <li class="Services__list-item">
-                <img src="./images/Category/Product_bkd-3.png" alt="rectangle" class="Services__list-img">
-                <a href="#" class="Services__list-link">
-                    <h3 class="Services__list-subtitle">TOYS</h3>
+            <li class="services__list-item">
+                <img src="./images/Category/Product_bkd-free.png" alt="services__list-pic" class="services__list-img">
+                <a href="#" class="services__list-link">
+                    <h3 class="services__list-subtitle">TOYS</h3>
                 </a>
             </li>
-            <li class="Services__list-item">
-                <img src="./images/Category/Product-4.png" alt="rectangle" class="Services__list-img">
-                <a href="#" class="Services__list-link">
-                    <h3 class="Services__list-subtitle">ACCESSORIES</h3>
+            <li class="services__list-item">
+                <img src="./images/Category/Product-four.png" alt="services__list-pic" class="services__list-img">
+                <a href="#" class="services__list-link">
+                    <h3 class="services__list-subtitle">ACCESSORIES</h3>
                 </a>
             </li>
-            <li class="Services__list-item">
-                <img src="./images/Category/Product-5.png" alt="rectangle" class="Services__list-img">
-                <a href="#" class="Services__list-link">
-                    <h3 class="Services__list-subtitle">SALE</h3>
+            <li class="services__list-item">
+                <img src="./images/Category/Product-five.png" alt="services__list-pic" class="services__list-img">
+                <a href="#" class="services__list-link">
+                    <h3 class="services__list-subtitle">SALE</h3>
                 </a>
             </li>
-            <li class="Services__list-item">
-                <img src="./images/Category/Product-6.png" alt="rectangle" class="Services__list-img">
-                <a href="#" class="Services__list-link">
-                    <h3 class="Services__list-subtitle">APPAREL ADULTS</h3>
+            <li class="services__list-item">
+                <img src="./images/Category/Product-six.png" alt="services__list-pic" class="services__list-img">
+                <a href="#" class="services__list-link">
+                    <h3 class="services__list-subtitle">APPAREL ADULTS</h3>
                 </a>
             </li>
         </ul>
-        <button class="Services__control">
-            <img src="./images/main/button.png" alt="vector" class="Services__control-img">
+        <button class="services__arrow">
+            <img src="./images/main/button.png" alt="vector" class="services__arrow-img">
         </button>
-        <button class="Services__control">
-            <img src="./images/main/button2.png" alt="vector" class="Services__control-img">
+        <button class="services__arrow">
+            <img src="./images/main/button-two.png" alt="vector" class="services__arrow-img">
         </button>
-        <p class="Services__phrase">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
+        <p class="services__phrase">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
     </section>
     <section class="page">
-        <img src="./images/delivery/girl.svg" alt="Girl" class="page__img">
+        <img src="./images/delivery/girl.png" alt="Girl" class="page__img">
         <ul class="page__list">
             <li class="page__list-item"> 
                 <p class="page__list-title">DELIVERY</p>
@@ -224,7 +224,7 @@
                 </li>
                 <li class="logo__list-item">
                     <a href="#" class="logo__list-link">
-                        <img src="./images/footer/Fill11.png" alt="Logotype Twitter" class="logo__list-img">
+                        <img src="./images/footer/Fill.png" alt="Logotype Twitter" class="logo__list-img">
                     </a>
                 </li>
                 <li class="logo__list-item">
