--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
             <ul class="logo__list">
                 <li class="logo__list-item">
                     <a href="#" class="logo__list-link">
-                        <img src="./images/footer/f.png" alt="Logotype Facebook" class="logo__list-img">
+                        <img src="./images/footer/Facebook.png" alt="Logotype Facebook" class="logo__list-img">
                     </a>
                 </li>
                 <li class="logo__list-item">
                     <a href="#" class="logo__list-link">
-                        <img src="./images/footer/Fill.png" alt="Logotype Twitter" class="logo__list-img">
+                        <img src="./images/footer/Twitter.png" alt="Logotype Twitter" class="logo__list-img">
                     </a>
                 </li>
                 <li class="logo__list-item">
@@ -234,7 +234,7 @@
                 </li>
                 <li class="logo__list-item">
                     <a href="#" class="logo__list-link">
-                        <img src="./images/footer/Shape.png" alt="Logotype Instagram" class="logo__list-img">
+                        <img src="./images/footer/Instagram.png" alt="Logotype Instagram" class="logo__list-img">
                     </a>
                 </li>
             </ul>
