--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
             <h2 class="logo__title">Connect</h2>
             <form class="logo__form">
                 <input type="email" name="email" class="logo__input" id="email" required>
-                <button type="submit" class="logo__btn
-                ">JOIN</button>
+                <button type="submit" class="logo__btn">JOIN</button>
             </form>
             <ul class="logo__list">
                 <li class="logo__list-item">
@@ -242,5 +241,37 @@
         <h2 class="signature">Copyright © 2018 Dlk • Design Life Kids</h2>
         <h2 class="signature">Web Design — Direct Line Development</h2>
     </footer>
+    <div class="page">
+        <form action="#" method="get" class="page__form">
+            <p class="page__form">
+                <label class="page__form-label" for="name">Name:</label>
+                <input type="text" name="name" class="page__form-input" id="name" required>
+            </p>
+            <p class="page__form">
+                <label class="page__form-label" for="name">Phone:</label>
+                <input type="text" name="phone" class="page__form-input" id="phone" required>
+            </p>
+            <p class="page__form">
+                <label class="page__form-label" for="mail">Email:</label>
+                <input type="email" name="email" class="page__form-input" id="mail" required>
+            </p>
+            <p class="page__form">
+                <label class="page__form-label" for="message">Message:</label>
+                <input type="text" name="nessage" class="page__form-input" id="message" required>
+            </p>
+            <ul class="page__list">
+                <li class="page__list-item">
+                    <img src="../images/Category/Vec.png" class="page__list-icon" alt="icon">
+                </li>
+                <li class="page__list-item">
+                    <img src="../images/Category/Rect.png" class="page__list-icon" alt="icon">
+                </li>
+                <li class="page__list-item">
+                    <p class="page__list-text">By clicking on the button, you consent to the processing of your personal data</p>
+                    <input type="submit" class="submit" value="SUBMIT">
+                </li>
+            </ul>
+        </form>
+    </div>
 </body>
 </html>
