--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DLK</title>
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/common.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -241,33 +247,35 @@
         <h2 class="signature">Copyright © 2018 Dlk • Design Life Kids</h2>
         <h2 class="signature">Web Design — Direct Line Development</h2>
     </footer>
-    <div class="page">
-        <form action="#" method="get" class="page__form">
-            <p class="page__form">
-                <label class="page__form-label" for="name">Name:</label>
-                <input type="text" name="name" class="page__form-input" id="name" required>
-            </p>
-            <p class="page__form">
-                <label class="page__form-label" for="name">Phone:</label>
-                <input type="text" name="phone" class="page__form-input" id="phone" required>
-            </p>
-            <p class="page__form">
-                <label class="page__form-label" for="mail">Email:</label>
-                <input type="email" name="email" class="page__form-input" id="mail" required>
-            </p>
-            <p class="page__form">
-                <label class="page__form-label" for="message">Message:</label>
-                <input type="text" name="nessage" class="page__form-input" id="message" required>
-            </p>
-            <ul class="page__list">
-                <li class="page__list-item">
-                    <img src="../images/Category/Vec.png" class="page__list-icon" alt="icon">
+    <div class="form">
+        <form action="#" method="get" class="form__form">
+            <ul class="form__form-list">
+                <li class="form__form-item">
+                    <label class="form__form-label" for="name">Name:</label>
+                    <input type="text" name="name" class="form__form-input" id="name" required>
                 </li>
-                <li class="page__list-item">
-                    <img src="../images/Category/Rect.png" class="page__list-icon" alt="icon">
+                <li class="form__form-item">
+                    <label class="form__items-label" for="phone">Phone:</label>
+                    <input type="text" name="phone" class="form__items-input" id="phone" required>
                 </li>
-                <li class="page__list-item">
-                    <p class="page__list-text">By clicking on the button, you consent to the processing of your personal data</p>
+                <li class="form__form-item">
+                    <label class="form__items-label" for="mail">Email:</label>
+                    <input type="email" name="email" class="form__items-input" id="mail" required>
+                </li>
+                <li class="form__form-item">
+                    <label class="form__items-label" for="message">Message:</label>
+                    <input type="text" name="message" class="form__items-input" id="message" required>
+                </li>
+            </ul>
+            <ul class="form__list">
+                <li class="form__list-item">
+                    <img src="../images/Category/Vec.png" class="form__list-icon" alt="icon">
+                </li>
+                <li class="form__list-item">
+                    <img src="../images/Category/Rect.png" class="form__list-icon" alt="icon">
+                </li>
+                <li class="form__list-item">
+                    <p class="form__list-text">By clicking on the button, you consent to the processing of your personal data</p>
                     <input type="submit" class="submit" value="SUBMIT">
                 </li>
             </ul>
