--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog</title>
 </head>
 <body>
     <header class="header">
         <a href="#" class="header__logo">
-            <img src="../images/Header/Union.png" alt="Logotype DLK" class="header__logo-img" >
+            <img src="../images/Header/Union.png" alt="logotype DLK" class="header__logo-img" >
         </a>
         <nav class="header__nav">
             <ul class="header__nav-list">
@@ -39,52 +39,52 @@
         </ul>
     </header>
     <h1 class="title">BLOG</h1>
-    <ul class="way__list">
-        <li class="way__list-item">
-            <p class="way__list-text">Home</p>
+    <ul class="breadcrumps__list">
+        <li class="breadcrumps__list-item">
+            <p class="breadcrumps__list-text">Home</p>
         </li>
-        <li class="way__list-item">
-            <img src="../images/Category/Vector.png" alt="way__list-vector" class="way__list-img">
+        <li class="breadcrumps__list-item">
+            <img src="../images/Category/Vector.png" alt="breadcrumps__list-vector" class="breadcrumps__list-img">
         </li>
-        <li class="way__list-item">
-            <p class="way__list-text">Blog</p>
+        <li class="breadcrumps__list-item">
+            <p class="breadcrumps__list-text">Blog</p>
         </li>
     </ul>
     <section class="blog">
         <ul class="blog__list">
             <li class="blog__list-item">
                 <img src="../images/Blog/blog-one.png" alt="blog__list-thumb" class="blog__list-img">
-                <p class="blog__list-textwithdate">23rd August 2018</p>
+                <p class="blog__list-date">23rd August 2018</p>
                 <h2 class="blog__list_desc">Top 5 fastest growing it service companies in philly</h2>
                 <p class="blog__list-text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p>
             </li>
             <li class="blog__list-item">
                 <img src="../images/Blog/blog-two.png" alt="blog__list-thumb" class="blog__list-img">
-                <p class="blog__list-textwithdate">23rd August 2018</p>
+                <p class="blog__list-date">23rd August 2018</p>
                 <h2 class="blog__list_desc">Best financial</h2>
                 <p class="blog__list-text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p>
             </li>
             <li class="blog__list-item">
                 <img src="../images/Blog/blog-free.png" alt="blog__list-thumb" class="blog__list-img">
-                <p class="blog__list-textwithdate">23rd August 2018</p>
+                <p class="blog__list-date">23rd August 2018</p>
                 <h2 class="blog__list_desc">Company logo or brand identity: which one is more important? brand identity</h2>
                 <p class="blog__list-text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p>
             </li>
             <li class="blog__list-item">
                 <img src="../images/Blog/blog-four.png" alt="blog__list-thumb" class="blog__list-img">
-                <p class="blog__list-textwithdate">23rd August 2018</p>
+                <p class="blog__list-hdate">23rd August 2018</p>
                 <h2 class="blog__list_desc">Best financial</h2>
                 <p class="blog__list-text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p>
             </li>
             <li class="blog__list-item">
                 <img src="../images/Blog/blog-five.png" alt="blog__list-thumb" class="blog__list-img">
-                <p class="blog__list-textwithdate">23rd August 2018</p>
+                <p class="blog__list-date">23rd August 2018</p>
                 <h2 class="blog__list_desc">Company logo or brand identity: which one is more important? brand identity</h2>
                 <p class="blog__list-text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p>
             </li>
             <li class="blog__list-item">
                 <img src="../images/Blog/blog-six.png" alt="blog__list-thumb" class="blog__list-img">
-                <p class="blog__list-textwithdate">23rd August 2018</p>
+                <p class="blog__list-date">23rd August 2018</p>
                 <h2 class="blog__list_desc">Top 5 fastest growing it service companies in philly</h2>
                 <p class="blog__list-text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p>
             </li>
@@ -94,10 +94,10 @@
                 <img src="../images/Category/Vector+.png" alt="blog__control-arrow" class="blog__control-img">
             </li>
             <li>
-                <p class="blog__control-number">1</p>
-                <p class="blog__control-number">2</p>
-                <p class="blog__control-number">3</p>
-                <p class="blog__control-number">4</p>
+                <a href="#" class="blog__control-number">1</a>
+                <a href="#" class="blog__control-number">2</a>
+                <a href="#" class="blog__control-number">3</a>
+                <a href="#" class="blog__control-numberbreadcrumps</a>
             </li>
             <li>
                 <img src="../images/Category/Vector-.png" alt="blog__control-arrow" class="blog__control-img">
