--- a/pages/Catalog.html
+++ b/pages/Catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Catalog</title>
 </head>
 <body>
     <header class="header">
@@ -39,18 +39,18 @@
         </ul>
     </header>
         <h1 class="title">CATEGORY PRODUCTS</h1>
-        <ul class="way__list">
-            <li class="way__list-item">
-                <p class="way__list-text">Home</p>
+        <ul class="breadcrumps__list">
+            <li class="breadcrumps__list-item">
+                <p class="breadcrumps__list-text">Home</p>
             </li>
-            <li class="way__list-item">
-                <img src="../images/Category/Vector.png" alt="way__list-vector" class="way__list-img">
+            <li class="breadcrumps__list-item">
+                <img src="../images/Category/Vector.png" alt="breadcrumps__list-vector" class="breadcrumps__list-img">
             </li>
-            <li class="way__list-item">
-                <p class="way__list-text">Catalog</p>
+            <li class="breadcrumps__list-item">
+                <p class="breadcrumps__list-text">Catalog</p>
             </li>
         </ul>
-        <section class="services">
+        <sectibreadcrumps class="services">
             <ul class="services__list">
                 <li class="services__list-item">
 -               <img src="../images/Category/Product-one.png" alt="services__list-pic" class="services__list-img">
@@ -89,12 +89,12 @@
                     </a>
                 </li>
             </ul>   
-        </section>
-        <section class="block">
-                <h2 class="block__subtitle">PRODUCT DESCRIPTION</h2>
-                <p class="block__text">Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
-                <p class="block__text">A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
-                <p class="block__text">The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
+        </sectibreadcrumps
+        <section class="desc">
+                <h2 class="desc__subtitle">PRODUCT DESCRIPTION</h2>
+                <p class="desc__text">Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
+                <p class="desc__text">A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
+                <p class="desc__text">The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
     </section>
     <footer>
         <section class="info">
