--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contaform</title>
 </head>
 <body>
     <header class="header">
@@ -39,48 +39,50 @@
         </ul>
     </header>
     <h1 class="title">CONTACT US</h1>
-    <ul class="way__list">
-        <li class="way__list-item">
-            <p class="way__list-text">Home</p>
+    <ul class="breadcrumps__list">
+        <li class="breadcrumps__list-item">
+            <p class="breadcrumps__list-text">Home</p>
         </li>
-        <li class="way__list-item">
-            <img src="../images/Category/Vector.png" alt="way__list-vector" class="way__list-img">
+        <li class="breadcrumps__list-item">
+            <img src="../images/Category/Vector.png" alt="breadcrumps__list-vector" class="breadcrumps__list-img">
         </li>
-        <li class="way__list-item">
-            <p class="way__list-text">Contact us</p>
+        <li class="breadcrumps__list-item">
+            <p class="breadcrumps__list-text">Contact us</p>
         </li>
     </ul> 
-    <div class="page">
-        <form action="#" method="get" class="page__form">
-            <p class="page__form">
-                <label class="page__form-label" for="name">Name:</label>
-                <input type="text" name="name" class="page__form-input" id="name" required>
-            </p>
-            <p class="page__form">
-                <label class="page__form-label" for="name">Phone:</label>
-                <input type="text" name="phone" class="page__form-input" id="phone" required>
-            </p>
-            <p class="page__form">
-                <label class="page__form-label" for="mail">Email:</label>
-                <input type="email" name="email" class="page__form-input" id="mail" required>
-            </p>
-            <p class="page__form">
-                <label class="page__form-label" for="message">Message:</label>
-                <input type="text" name="nessage" class="page__form-input" id="message" required>
-            </p>
-            <ul class="page__list">
-                <li class="page__list-item">
-                    <img src="../images/Category/Vec.png" class="page__list-icon" alt="icon">
+    <div class="form">
+        <fobreadcrumps action="#" method="get" class="form__form">
+            <ul class="form__form-list">
+                <li class="form__form-item">
+                    <label class="form__form-label" for="name">Name:</label>
+                    <input type="text" name="name" class="form__form-input" id="name" required>
                 </li>
-                <li class="page__list-item">
-                    <img src="../images/Category/Rect.png" class="page__list-icon" alt="icon">
+                <li class="form__form-item">
+                    <label class="form__items-label" for="phone">Phone:</label>
+                    <input type="text" name="phone" class="form__items-input" id="phone" required>
                 </li>
-                <li class="page__list-item">
-                    <p class="page__list-text">By clicking on the button, you consent to the processing of your personal data</p>
+                <li class="form__form-item">
+                    <label class="form__items-label" for="mail">Email:</label>
+                    <input type="email" name="email" class="form__items-input" id="mail" required>
+                </li>
+                <li class="form__form-item">
+                    <label class="form__items-label" for="message">Message:</label>
+                    <input type="text" name="message" class="form__items-input" id="message" required>
+                </li>
+            </ul>
+            <ul class="form__list">
+                <li class="form__list-item">
+                    <img src="../images/Category/Vec.png" class="form__list-icon" alt="icon">
+                </li>
+                <li class="form__list-item">
+                    <img src="../images/Category/Rect.png" class="form__list-icon" alt="icon">
+                </li>
+                <li class="form__list-item">
+                    <p class="form__list-text">By clicking on the button, you consent to the processing of your personal data</p>
                     <input type="submit" class="submit" value="SUBMIT">
                 </li>
             </ul>
-        </form>
+        </fobreadcrumps
     </div>
     <footer>
         <section class="info">
